--- a/stage/css/_media.scss
+++ b/stage/css/_media.scss
@@ -72,6 +72,11 @@
         .scroll-top{
             bottom: 0;
         }
+
+        .contact .form-group img{
+            height: 100px;
+            margin-bottom: 30px;
+        }
 }
 
 // medium screen
